--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,58 @@
-openvino==2023.1.0
-ultralytics==8.0.27
+addict==2.4.0
+certifi==2023.7.22
+charset-normalizer==3.3.2
+colorama==0.4.6
+coloredlogs==15.0.1
+contourpy==1.2.0
+cycler==0.12.1
+Cython==3.0.5
+defusedxml==0.7.1
+docopt==0.6.2
+filelock==3.13.1
+flatbuffers==23.5.26
+fonttools==4.44.0
+fsspec==2023.10.0
+humanfriendly==10.0
+idna==3.4
+Jinja2==3.1.2
+jstyleson==0.0.2
+kiwisolver==1.4.5
+lapx==0.5.5
+MarkupSafe==2.1.3
+matplotlib==3.8.1
+mpmath==1.3.0
+networkx==3.1
+numpy==1.26.1
 onnx==1.15.0
 onnxruntime==1.16.1
-
+opencv-python==4.8.1.78
+openvino==2023.1.0
+openvino-dev==2023.1.0
+openvino-telemetry==2023.2.1
+packaging==23.2
+pandas==2.1.2
+Pillow==10.1.0
+pipreqs==0.4.13
+protobuf==4.25.0
+psutil==5.9.6
+py-cpuinfo==9.0.0
+pyparsing==3.1.1
+pyreadline3==3.4.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
+scipy==1.10.1
+seaborn==0.13.0
+six==1.16.0
+sympy==1.12
+texttable==1.7.0
+thop==0.1.1.post2209072238
+torch==2.1.0
+torchvision==0.16.0
+tqdm==4.66.1
+typing_extensions==4.8.0
+tzdata==2023.3
+ultralytics==8.0.207
+urllib3==2.0.7
+yarg==0.1.9
